--- a/style.css
+++ b/style.css
@@ -18,8 +18,8 @@
     position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     background: rgba(0, 0, 0, 0.5);
     backdrop-filter: blur(5px);
     justify-content: center;
@@ -29,26 +29,59 @@
 
 .modal {
     width: 450px;
-    height: 362px;
+    height: 402px;
     background-color: white;
     padding: 20px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    border-radius: 10px;
+    border-radius: 5px;
     position: fixed;
+    margin-top: 10%;
+    margin-left: 33%;
     z-index: 1001;
 }
 
 .form-group {
     margin-bottom: 15px;
+    display: flex;
+    flex-direction: column;
+    color: #2D3142;
+}
+
+label {
+    margin-bottom: 5px;
+    font-weight: bold;
+    color: #6F718F99;
 }
 
 input[type="text"],
-input[type="checkbox"] {
-    width: 48%;
-    /* Adjust width as needed */
+input[type="email"] {
     padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
+    border: none;
+    border-bottom: 2px solid #ccc;
+    border-radius: 0px;
+    font-weight: bolder;
+    outline: none;
+    margin-bottom: 10px;
+}
+
+/* input[type="text"]:focus,
+input[type="email"]:focus {
+    border-bottom: 1px solid #FF3366;
+}
+
+*/
+input[type="checkbox"] {
+    border: 2px solid #FF3366;
+    border-radius: 3px;
+    padding: 10px;
+    accent-color: #FF3366;
+    width: 14px;
+    height: 14px;
+}
+
+input[type="text"],
+input[type="email"] {
+    width: 100%;
 }
 
 input[type="checkbox"] {
@@ -56,6 +89,9 @@ input[type="checkbox"] {
     margin-right: 5px;
 }
 
+.agree {
+    color: #616678;
+}
 
 
 .contact-bt {
@@ -63,6 +99,9 @@ input[type="checkbox"] {
     border-radius: 2px;
     width: 160px;
     height: 50px;
+    color: aliceblue;
+    text-transform: uppercase;
+    border: none;
 }
 
 .s2 {
