--- a/style.css
+++ b/style.css
@@ -309,13 +309,17 @@ input[type="checkbox"] {
     width: 200px;
     text-align: center;
     padding: 20px;
-    box-shadow: 3px 6px 20px #672C2C1F;
+    background-color: white;
     /* background: #F6F6F6 0% 0% no-repeat padding-box; */
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     border-radius: 10px;
+}
+
+.s5-card:hover {
+    box-shadow: 3px 6px 20px #672C2C1F;
 }
 
 .s5-card img {
